# File: ~/rusted_out/Cargo.toml

[package]
name = "chrono_db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime - for handling I/O operations efficiently
tokio = { version = "1.37", features = ["macros", "fs", "io-util", "rt-multi-thread"] }

# JSON Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Robust Error Handling
anyhow = "1.0"

# Timestamp Parsing and Time Operations
chrono = { version = "0.4", features = ["serde"] }

# For indexing and fast lookups (HashMap replacement with better performance)
indexmap = "2.1"

# For binary serialization (ultra-fast data persistence)
bincode = "1.3"

# For compression (save disk space on large datasets)
flate2 = "1.0"

# For statistics and analytics on your agent data
statrs = "0.16"

